fix(UserService): improve logging, test isolation, and dynamic JWKS kid